Fix scroll on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.swiper-pagination {
+  position: fixed !important;
+  bottom: 0 !important;
+  background: white !important;
+  padding: 4px !important;
+}
